# vllm-gguf-plugin

./: MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.buildkite/: pipeline.yml  test-merge.yml
.github/workflows/: release.yml
docker/: Dockerfile.ci
docs/: gguf-layout-coordination.md  ternary-backend-support.md
docs/bonsai/: benchmarks.md  installation.md  limitations.md  usage.md  validation.md
docs/maintainer-outreach/: ggml-issue.md  prismml-issue.md  summary.md
scripts/: build_jit_cache_wheel.sh  gguf_layout_collision.py
tests/: conftest.py  test_dequant_chunking.py  test_gguf_generation.py  test_gguf_layout_collision.py  test_gguf_utils.py  test_kernels.py  test_multimodal_gguf.py  test_plugin.py  test_qwen35_adapter.py  test_ternary.py
tests/fixtures/gguf-layout-collision/: README.md  q1_0-id41.gguf  q2_0-id42-prism.gguf  q2_0-id42-upstream.gguf
tests/integration/: test_ternary_models.py
vllm-gguf-plugin-jit-cache/: build_backend.py  pyproject.toml
vllm-gguf-plugin-jit-cache/vllm_gguf_plugin_precompiled/: __init__.py  _build_meta.py
vllm_gguf_plugin/: __init__.py  _gguf_compat.py  _jit.py  config_parser.py  gguf_utils.py  loader.py  ops.py  plugin.py  quantization.py  weight_utils.py  weights_adapter.py
vllm_gguf_plugin/models/: __init__.py  qwen3_5.py
vllm_gguf_plugin/quantization/: config.py  fused_moe.py  linear.py  params.py  utils.py
vllm_gguf_plugin/reference/: __init__.py  ternary.py
vllm_gguf_plugin/weights_adapter/: __init__.py  base.py  default.py  gemma3.py  qwen35.py
(+10 files in other folders)
